err/restorm-setuptools.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restorm'...
Listing './lib/python3.5/site-packages/restorm/clients'...
Compiling './lib/python3.5/site-packages/restorm/clients/base.py'...
***   File "./lib/python3.5/site-packages/restorm/clients/base.py", line 193
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restorm/clients/tests'...
Listing './lib/python3.5/site-packages/restorm/examples'...
Listing './lib/python3.5/site-packages/restorm/examples/flickr'...
Listing './lib/python3.5/site-packages/restorm/examples/mock'...
Compiling './lib/python3.5/site-packages/restorm/examples/mock/library_serv.py'...
***   File "./lib/python3.5/site-packages/restorm/examples/mock/library_serv.py", line 29
    print 'Mock library webservice is running at http://%s:%s/api/' % (ip_address, port)
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restorm/examples/mock/ticket_serv.py'...
***   File "./lib/python3.5/site-packages/restorm/examples/mock/ticket_serv.py", line 29
    print 'Mock ticket webservice is running at http://%s:%s/api/' % (ip_address, port)
                                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restorm/examples/twitter'...
Listing './lib/python3.5/site-packages/restorm/tests'...
Compiling './lib/python3.5/site-packages/restorm/tests/test_resource.py'...
***   File "./lib/python3.5/site-packages/restorm/tests/test_resource.py", line 73
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restorm/utils.py'...
***   File "./lib/python3.5/site-packages/restorm/utils.py", line 15
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/restorm_setuptools-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
